[workspace]
members = [
    "bindings",
]

[package]
name = "mangata-finalizer"
version = "0.1.0"
edition = "2021"

[dependencies]
bindings = { path = "./bindings" }

aes = "0.8.0"
ark-bn254 = { version = "0.4.0", features = ["std", "curve"] }
ark-ec = "0.4.2"
ark-ff = { version = "0.4.2", features = ["std"] }
clap = { version = "4.4.8", features = ["derive", "env"] }
color-eyre = "0.6"
ctr = "0.9.0"
eth-keystore = "0.5.0"
ethers = { version = "2.0", features = ["rustls", "ws"] }
eyre = "0.6.8"
hex = { version = "0.4.3", default-features = false }
log = { version = "0.4.17" }
reqwest = "0.11.23"
scrypt = "0.10.0"
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.85" }
sha3 = "0.10.0"
tokio = { version = "1.34.0", features = ["full"] }
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }


# Polkadot SDK
frame-remote-externalities = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

sc-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-executor = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-externalities = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-keystore = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-rpc = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-state-machine = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
substrate-rpc-client = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

node-executor = { package = "node-executor", git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
node-primitives = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

