[workspace]
members = [
    "bindings",
]

[package]
name = "operator"
version = "0.1.0"
edition = "2021"

[dependencies]
bindings = { path = "./bindings" }

assert_cmd = { version = "2.0.10" }
async-trait = { version = "0.1.57" }
bytesize = { version = "1.2.0" }
clap = { version = "4.4.8", features = ["derive"] }
env_logger = { version = "0.10.0" }
ethers = { version = "2.0", features = ["rustls", "ws"] }
eyre = "0.6.8"
hex = { version = "0.4.3", default-features = false }
itertools = { version = "0.11.0" }
log = { version = "0.4.17" }
parity-scale-codec = { version = "3.6.1" }
regex = { version = "1.7.3" }
serde = { version = "1.0.192", features = ["derive"] }
serde_json = { version = "1.0.85" }
serde_yaml = "0.9.27"
strum = "0.25"
strum_macros = "0.25"
tempfile = { version = "3.1.0" }
tokio = { version = "1.34.0", features = ["full"] }
zstd = { version = "0.11.2", default-features = false }

# Polkadot SDK
frame-remote-externalities = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
frame-try-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
frame-support = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

sc-cli = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-executor = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sc-service = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

sp-api = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-consensus-aura = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-consensus-babe = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-core = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-externalities = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-inherents = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-io = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-keystore = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-rpc = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-runtime = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-state-machine = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-storage = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-std = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-timestamp = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-transaction-storage-proof = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-version = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
sp-weights = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

substrate-cli-test-utils = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
substrate-rpc-client = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }

node-executor = { package = "node-executor", git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
node-primitives = { git = "https://github.com/mangata-finance/polkadot-sdk", branch = "develop" }
