[workspace.package]
authors = ["Gasp Team"]
edition = "2021"
repository = "https://github.com/gasp-xyz/gasp-monorepo.git"

[workspace]
resolver = "2"
members = [
	'sequencer',
	'bindings/contracts', 
	'bindings/gasp', 
  "types",
  "l1api",
  "l2api",
]

[profile.dev]
split-debuginfo = "unpacked"
incremental = true
lto = true

[profile.release]
panic = 'unwind'

[profile.production]
inherits = "release"
lto = true
codegen-units = 1


[workspace.dependencies]
contract-bindings = { path = "./bindings/contracts/" }
gasp-bindings = { path = "./bindings/gasp" }
l1api = { path = "./l1api/" }
l2api = { path = "./l2api/" }
gasp-types = { path = "./types/" }
