[package]
name = "ferry-withdrawal"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
tokio = { version = "1.41", features = ["macros", "time", "rt-multi-thread", "net"] }
serde = { version = "1.0.197" ,features = ["alloc", "derive"]}
sha3 = "0.10.8"
hex = "0.4.3"
hex-literal = "0.4.1"
futures = "0.3.17"
thiserror = "2.0.3"
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
lru = "0.12.5"
prometheus = "0.13.4"
lazy_static = "1.4.0"
warp = "0.3.7"
clap = { version = "4.4.8", features = ["derive", "env"] }
itertools = "0.14.0"

l1api = { workspace = true }
l2api = { workspace = true }
gasp-types = { workspace = true }
common = { workspace = true }


[dev-dependencies]
mockall = "0.13.0"
serial_test = "3.2.0"
tracing-test = "0.2.5"
test-case = "3.3.1"

