[package]
name = "l1api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
subxt = "0.38.0"
subxt-signer = "0.38.0"
tokio = { version = "1.41", features = ["macros", "time", "rt-multi-thread", "net"] }
parity-scale-codec = { version = "3.6.1",  features = ["bit-vec", "derive"] }
scale-info = { version = "2.10.0", features = ["bit-vec", "derive", "serde"] }
serde = { version = "1.0.197" ,features = ["alloc", "derive"]}
primitive-types = "0.13.1"
secp256k1 = { version = "0.28.0", features = ["recovery", "rand-std", "global-context"] }
sha3 = "0.10.8"
hex = "0.4.3"
hex-literal = "0.4.1"
futures = "0.3.17"
thiserror = "2.0.3"
alloy = { version = "0.8.3", features = ["sol-types", "contract", "signer-local", "provider-http", "provider-ws"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
envconfig = "0.11.0"
lru = "0.12.5"
prometheus = "0.13.4"
lazy_static = "1.4.0"
warp = "0.3.7"
contract-bindings = { workspace = true }


[dev-dependencies]
mockall = "0.13.0"
serial_test = "3.2.0"
tracing-test = "0.2.5"

