[package]
name = "sequencer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sequencer"

[dependencies]
subxt = "0.38.0"
subxt-signer = "0.38.0"
tokio = { version = "1.41", features = ["macros", "time", "rt-multi-thread"] }
parity-scale-codec = { version = "3.6.1",  features = ["bit-vec", "derive"] }
scale-info = { version = "2.10.0", features = ["bit-vec", "derive", "serde"] }
serde = { version = "1.0.197" ,features = ["alloc", "derive"]}
primitive-types = "0.13.1"
secp256k1 = { version = "0.28.0", features = ["recovery", "rand-std", "global-context"] }
sha3 = "0.10.8"
hex = "0.4.3"
hex-literal = "0.4.1"
futures = "0.3.17"
thiserror = "2.0.3"
alloy = { git = "https://github.com/alloy-rs/alloy", features = ["sol-types", "contract", "signer-local"] }
tracing = "0.1.40"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing-tree = "0.4.0"
envconfig = "0.11.0"

bindings = { workspace = true }


[dev-dependencies]
mockall = "0.13.0"
serial_test = "3.2.0"

# [profile.dev]
# incremental = true
# lto = true
