[package]
name = "stash-api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
reqwest = "0.12.15"
serde = { version = "1.0.197" ,features = ["alloc", "derive"]}
thiserror = "2.0.3"
serde_json = "1.0.140"
primitive-types = "0.13.1"
tracing = "0.1.40"
ringbuffer = "0.15.0"
mockall = "0.13.0"
serde-query = "0.2.0"
hex = "0.4.3"
