[package]
name = "rollup-runtime-integration-test"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
env_logger.workspace = true
log.workspace = true
test-case.workspace = true

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
mangata-support = { workspace = true, default-features = false }
mangata-types = { workspace = true }
pallet-balances = { workspace = true }
pallet-identity = { workspace = true }
pallet-membership = { workspace = true }
pallet-proxy = { workspace = true }
pallet-session = { workspace = true }
pallet-transaction-payment = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-storage = { workspace = true }
hex-literal = { workspace = true }
codec = { workspace = true }

# Open-Runtime-Module-Library Dependencies
orml-asset-registry = { workspace = true }
orml-tokens = { workspace = true }
orml-traits = { workspace = true }

# Local
pallet-bootstrap = { path = "../../../pallets/bootstrap" }
pallet-issuance = { path = "../../../pallets/issuance" }
pallet-fee-lock = { path = "../../../pallets/fee-lock" }
pallet-maintenance = { path = "../../../pallets/maintenance" }
pallet-market = { path = "../../../pallets/market" }
pallet-multipurpose-liquidity = { path = "../../../pallets/multipurpose-liquidity" }
pallet-proof-of-stake = { path = "../../../pallets/proof-of-stake" }
pallet-rolldown = { path = "../../../pallets/rolldown" }
pallet-sudo-origin = { path = "../../../pallets/sudo-origin" }
pallet-xyk = { path = "../../../pallets/xyk" }
pallet-stable-swap = { path = "../../../pallets/stable-swap" }
parachain-staking = { path = "../../../pallets/parachain-staking" }
rolldown-runtime-api = { path = "../../../pallets/rolldown/runtime-api" }
rollup-runtime = { path = "../" }
xyk-runtime-api = { path = "../../../pallets/xyk/runtime-api" }

[features]
default = []
